--- a/README.en
+++ b/README.en
@@ -24,7 +24,7 @@ Any environment that Processing works
 Installation
 ---------------------------------------
 Download the file ppopupmenu and extract it to <processing-sketches>/libraries/.
-Ex: <processing-sketches>/libraries/ppopupmenu
+Mac ex:  /Users/<Username>/Documents/Processing/libraries/ppopupmenu
 
 ---------------------------------------
 How to set up new code
